# energy-optimisation

./: .gitmodules  CONTRIBUTION.md  README.md  main.py  pyproject.toml  tri_valley_energy_data.csv
app/: utlity.py
