[tool.poetry]
name = "energy-optimisation"
version = "0.1.0"
description = "An Streamlit application which helps user to optimised the engery consumption"
authors = ["DeepeshKalura <deepeshkalurs@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.34.0"
pandas = "^2.2.2"
numpy = "^1.26.4"
scikit-learn = "^1.4.2"
seaborn = "^0.13.2"
plotly = "^5.22.0"
geocoder = "^1.38.1"
streamlit-folium = "^0.20.0"
openai = "^1.30.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
